@@ -21,6 +21,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -103,6 +113,8 @@ specifier|public
 name|void
 name|testCheckColumn_Ok
 parameter_list|()
+throws|throws
+name|IOException
 block|{
 name|ScanWildcardColumnTracker
 name|tracker
@@ -335,6 +347,8 @@ specifier|public
 name|void
 name|testCheckColumn_EnforceVersions
 parameter_list|()
+throws|throws
+name|IOException
 block|{
 name|ScanWildcardColumnTracker
 name|tracker
